terminator でrviz とgazeboの起動を確認 flexbeはuiが起動しない

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,31 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
-    image: ros2_humble_dev_image_fix_dev
+    image: ros2_humble_flexbe_dev_image_fix_dev
     container_name: ros2_humble_container_fix_dev
     # ttyとstdin_openをtrueにして、コンテナを起動し続けて対話的に使えるようにする
     tty: true
     stdin_open: true
+    shm_size: 2gb
     # ボリュームマウント
     volumes:
       # ホストのsrcディレクトリをコンテナのワークスペースのsrcにマウント
       - ./src:/home/dockeruser/ros2_ws/src
       # X11 Forwarding (GUI表示) の設定
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      #terminalの設定
+      - ./terminator_config:/home/dockeruser/.config/terminator
+      #terminator実行時スクリプトの設定
+      - ./scripts:/home/dockeruser/scripts
+      - /var/run/dubs:/var/run/dubs
     # 環境変数
     environment:
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM=1
+      # GPUに正しくアクセスするための環境変数を追加
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
+
     # ホストのネットワークをそのまま使う設定。ROSの通信が楽になる。
     network_mode: host
     # GPUを使いたい場合は下のコメントを外す
