--- a/terminator_config/config
+++ b/terminator_config/config
@@ -3,49 +3,39 @@
 [keybindings]
 [profiles]
    [[default]]
-   cursor_color = "#aaaaaa"
+      cursor_color = "#aaaaaa"
 [layouts]
    [[default]]
-   [[[child0]]]
-      parent = splitter1
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_0.bash
-   [[[child1]]]
-      parent = splitter1
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_1.bash
-   [[[child2]]]
-      parent = splitter2
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_2.bash
-      profile = default
-   [[[child3]]]
-      parent = splitter3
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_3.bash
-   [[[child4]]]
-      parent = splitter3
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_4.bash
-   
-   
-   [[[splitter1]]]
-      parent = splitter_main
-      type = VPaned
-   [[[splitter2]]]
-      parent = splitter_main
-      type = VPaned
-   [[[splitter3]]]
-      parent = splitter2
-      type = VPaned
-   
-   [[[splitter_main]]]
-      parent = window0
-      type = HPaned
-   
-   [[[window0]]]
-      parent = ""
-      type = Window
-      title = ros1-noetic-dev
-      maximized = False
+      [[[child0]]]
+         parent = v_splitter_left  # Top-Left
+         type = Terminal
+         command = bash /home/dockeruser/scripts/launch_0.bash
+      [[[child1]]]
+         parent = v_splitter_left  # Bottom-Left
+         type = Terminal
+         command = bash /home/dockeruser/scripts/launch_1.bash
+      [[[child2]]]
+         parent = v_splitter_right # Top-Right
+         type = Terminal
+         command = bash /home/dockeruser/scripts/launch_2.bash
+      [[[child3]]]
+         parent = v_splitter_right # Bottom-Right
+         type = Terminal
+         command = bash /home/dockeruser/scripts/launch_3.bash
+      
+      [[[v_splitter_left]]]
+         parent = splitter_main
+         type = VPaned
+      [[[v_splitter_right]]]
+         parent = splitter_main
+         type = VPaned
+
+      [[[splitter_main]]]
+         parent = window0
+         type = HPaned
+      [[[window0]]]
+         parent = ""
+         type = Window
+         title = ros2-humble-dev
+         maximized = true
 [plugins]
