--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,8 @@ FROM osrf/ros:humble-desktop
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# 基本ツールと、BehaviorTree、そして証明書を追加
+# 基本ツールと、ROSのビルドツール、そして証明書などを追加
+# FlexBEに直接必要だったものは一旦コメントアウト、必要なら後で追加する
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     wget \
@@ -19,79 +20,34 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     x11-apps \
     dbus-x11 \
     ca-certificates \
-    libcanberra-gtk3-module \
-    gir1.2-keybinder-3.0 \
-    gir1.2-notify-0.7 \
-    at-spi2-core \
-    librsvg2-common \
-    adwaita-icon-theme-full \
-    yaru-theme-icon \
+    libxkbcommon-x11-0 \
+    libxcb-icccm4 \
+    libxcb-image0 \
+    libxcb-keysyms1 \
+    libxcb-randr0 \
+    libxcb-render-util0 \
+    libxcb-xinerama0 \
+    libxcb-cursor0 \
+    && rm -rf /var/lib/apt/lists/* \
     gazebo \
     ros-humble-gazebo-* \
     ros-humble-rqt-* \
     ros-humble-nav2-behavior-tree \
-    fonts-liberation \
-    libasound2 \
-    libatk-bridge2.0-0 \
-    libgbm1 \
-    libpango1.0-0 \
-    tar \
-    libgtk-3-0 \
-    libasound2 \
-    libnss3 \
-    libxss1 \
-    libxcomposite1 \
-    libxrandr2 \
-    libatk1.0-0 \
-    libatspi2.0-0 \
-    libxdamage1 \
-    libx11-xcb1 \
-    libxcb-dri3-0 \
     && rm -rf /var/lib/apt/lists/*
 
-# rosdepの更新処理のみ行う
-RUN rosdep update
-
-# === FlexBEの導入処理 ===
-# ワークスペースの作成
-RUN mkdir -p /opt/ros2_ws/src
-
-# ワークスペースのsrcディレクトリに移動
-WORKDIR /opt/ros2_ws/src
-
-# 必要なFlexBEリポジトリを、それぞれ正しいhumbleブランチを指定してクローン
-RUN git clone -b humble https://github.com/FlexBE/flexbe_behavior_engine.git
-RUN git clone -b humble https://github.com/FlexBE/flexbe_app.git
-
-# ワークスペースのルートに移動
-WORKDIR /opt/ros2_ws
-
-# 依存関係のインストール、ビルド、そしてnwjsの手動インストール
-RUN ["/bin/bash", "-c", \
-    "set -ex && \
-    apt-get update && \
-    . /opt/ros/humble/setup.bash && \
-    rosdep install --from-paths src --ignore-src -r -y --skip-keys \"actionlib genpy catkin rospack rostest flexbe_app flexbe_behavior_engine flexbe_input flexbe_mirror flexbe_msgs flexbe_onboard flexbe_states flexbe_testing flexbe_widget\" && \
-    colcon build --symlink-install && \
-    . install/setup.bash && \
-    cd /tmp && \
-    NWJS_VERSION=v0.83.0 && \
-    NWJS_FILENAME=nwjs-sdk-${NWJS_VERSION}-linux-x64 && \
-    wget https://dl.nwjs.io/${NWJS_VERSION}/${NWJS_FILENAME}.tar.gz && \
-    tar -xzf ${NWJS_FILENAME}.tar.gz && \
-    mkdir -p /opt/ros2_ws/install/flexbe_app/lib/flexbe_app/nwjs && \
-    mv ${NWJS_FILENAME}/* /opt/ros2_ws/install/flexbe_app/lib/flexbe_app/nwjs/ && \
-    chown -R 1000:1000 /opt/ros2_ws/install/flexbe_app/lib/flexbe_app/nwjs && \
-    rm -rf /tmp/*" \
-]
+# rosdepの初期化
+RUN rm -rf /etc/ros/rosdep/sources.list.d/20-default.list && rosdep init && rosdep update
 
 # === ユーザー設定 ===
 RUN useradd -m -s /bin/bash dockeruser && echo "dockeruser:yakiniku" | chpasswd && adduser dockeruser sudo
-RUN mkdir -p /dev/bus/usb
 USER dockeruser
-WORKDIR /home/dockeruser/ros2_ws
+WORKDIR /home/dockeruser
+ENV XDG_CONFIG_HOME=/tmp/.chromium
+ENV XDG_CACHE_HOME=/tmp/.chromium
+
 
 # === エントリーポイント設定 ===
-COPY --chmod=755 docker/entrypoint.sh /home/dockeruser/entrypoint.sh
+# entrypoint.shはコンテナ起動時にD-Busを起動するために、そのまま使う
+COPY --chown=dockeruser:dockeruser --chmod=755 docker/entrypoint.sh /home/dockeruser/entrypoint.sh
 ENTRYPOINT ["/home/dockeruser/entrypoint.sh"]
 CMD ["bash"]
