--- a/terminator_config/config
+++ b/terminator_config/config
@@ -1,5 +1,6 @@
 [global_config]
   title_transmit_bg_color = "#d30102"
+  suppress_multiple_term_dialog = True
 [keybindings]
 [profiles]
   [[default]]
