--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     # NVIDIA GPU を使うための現在の推奨設定
     runtime: nvidia
 
+    #AppArmorの制限をこのコンテナだけ解除
+    security_opt:
+      - "apparmor=unconfined"
+    
     volumes:
       # ホストのsrcディレクトリをコンテナのワークスペースのsrcにマウント
       - ./src:/home/dockeruser/ros2_ws/src
