--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
-    image: ros2_humble_flexbe_dev_image_fix_dev
+    image: ros2-humble-dev
     container_name: ros2_humble_dev_image
     tty: true
     stdin_open: true
