--- a/terminator_config/config
+++ b/terminator_config/config
@@ -5,38 +5,41 @@
 [profiles]
   [[default]]
     cursor_color = "#aaaaaa"
+    # ターミナルが開いたときに、シェルのプロンプトを表示したままにする
+    login_shell = True
 [layouts]
   [[default]]
-    [[[child0]]]
-      parent = v_splitter_left  # Top-Left
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_0.bash
-    [[[child1]]]
-      parent = v_splitter_left  # Bottom-Left
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_1.bash
-    [[[child2]]]
-      parent = v_splitter_right  # Top-Right
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_2.bash
-    [[[child3]]]
-      parent = v_splitter_right  # Bottom-Right
-      type = Terminal
-      command = bash /home/dockeruser/scripts/launch_3.bash
-    
-    [[[v_splitter_left]]]
-      parent = splitter_main
-      type = VPaned
-    [[[v_splitter_right]]]
-      parent = splitter_main
-      type = VPaned
-    
-    [[[splitter_main]]]
-      parent = window0
-      type = HPaned
     [[[window0]]]
-      parent = ""
       type = Window
-      title = ros2-humble-dev
-      maximized = true
+      parent = ""
+      # ここを修正
+      window_state = maximise
+    [[[child1]]]
+      type = HPaned
+      parent = window0
+    [[[child2]]]
+      type = VPaned
+      parent = child1
+    [[[child3]]]
+      type = VPaned
+      parent = child1
+
+      
+    [[[terminal1]]]
+      type = Terminal
+      parent = child2
+      # 各ターミナルで実行するコマンド
+      command = bash /home/dockeruser/scripts/launch_0.bash
+    [[[terminal2]]]
+      type = Terminal
+      parent = child2
+      command = bash /home/dockeruser/scripts/launch_1.bash
+    [[[terminal3]]]
+      type = Terminal
+      parent = child3
+      command = bash /home/dockeruser/scripts/launch_2.bash
+    [[[terminal4]]]
+      type = Terminal
+      parent = child3
+      command = bash /home/dockeruser/scripts/launch_3.bash
 [plugins]
