--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,9 @@
+# ベースイメージは君が選んだもの
 FROM osrf/ros:humble-desktop
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+# 君が書いたパッケージインストール
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     wget \
@@ -32,27 +34,38 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     software-properties-common  \
     && rm -rf /var/lib/apt/lists/*
 
-
-#realsense2 setup
+# 君が書いたrealsense2のセットアップ
 RUN mkdir -p /etc/apt/keyrings && \
     curl -sSf https://librealsense.intel.com/Debian/librealsense.pgp | tee /etc/apt/keyrings/librealsense.pgp > /dev/null
 RUN echo "deb [signed-by=/etc/apt/keyrings/librealsense.pgp] https://librealsense.intel.com/Debian/apt-repo $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/librealsense.list
 
+# --- ここを少し変更 ---
+# realsenseと一緒に、rtabmapもインストールする
 RUN apt-get update && apt-get install -y \
     librealsense2-utils \
     librealsense2-dev \
     librealsense2-dbg \
     ros-humble-realsense2-camera \
+    ros-humble-rtabmap-ros \
     && rm -rf /var/lib/apt/lists/*
-#-------------------------------------------
+# --- 変更ここまで ---
 
 RUN rm -f /etc/ros/rosdep/sources.list.d/20-default.list && rosdep init && rosdep update
 
+# 君が書いたユーザー設定
 RUN useradd -m -s /bin/bash dockeruser && echo "dockeruser:yakiniku" | chpasswd && adduser dockeruser sudo
 RUN groupadd -g 110 render || true && usermod -aG video,render dockeruser
 USER dockeruser
 WORKDIR /home/dockeruser
 
+# --- ここから追加 ---
+# ワークスペースと設定ファイル用のディレクトリを作成
+RUN mkdir -p /home/dockeruser/ros2_ws/src/my_robot_configs/launch
+RUN mkdir -p /home/dockeruser/ros2_ws/src/my_robot_configs/config
+
+COPY --chown=dockeruser:dockeruser scripts/my_realsense.launch.py /home/dockeruser/ros2_ws/src/my_robot_configs/launch/
+COPY --chown=dockeruser:dockeruser src/rtabmap_params.yaml /home/dockeruser/ros2_ws/src/my_robot_configs/config/
+# 君が書いたエントリーポイント
 COPY --chown=dockeruser:dockeruser --chmod=755 docker/entrypoint.sh /home/dockeruser/entrypoint.sh
 ENTRYPOINT ["/home/dockeruser/entrypoint.sh"]
 CMD ["bash"]
